# mqtt-ingest

./: .env.example  .flake8  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-git.txt  requirements.txt
.github/workflows/: ci.yaml
app/: config.py  health.py  kafka_producer.py  main.py  message_handler.py  mqtt_client.py
app/api/: __init__.py  health.py  routes.py
app/core/: __init__.py  kafka_producer.py  message_handler.py  mqtt_client.py
app/services/: __init__.py  metrics.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/mocks/: devices.py  helpers.py  kafka.py  mqtt.py  time.py
tests/unit/: test_config.py  test_health.py  test_message_handler.py
